Fix hero column alignment

--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -720,7 +720,7 @@ footer {
 }
 
 .section-home-header .col {
-   justify-content: flex-end;
+   justify-content: flex-start;
    align-items: center;
    position: relative;
    width: 100%;
